// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItem /> should render a a menu item with a link 1`] = `
<li>
  <styled.a
    href="www.google.com"
  >
    Test menu item
  </styled.a>
</li>
`;

exports[`<MenuItem /> should render a menu item with Icon 1`] = `
<li>
  <styled.a
    href="www.google.com"
  >
    <styled.span>
      <IntelliIcon
        type="clock"
      />
    </styled.span>
    Test menu item
  </styled.a>
</li>
`;

exports[`<MenuItem /> should render a menu item with active state 1`] = `
<li>
  <styled.a
    href="www.google.com"
  >
    Test menu item
  </styled.a>
</li>
`;

exports[`<MenuItem /> should render a simple menu item 1`] = `
<li>
  <styled.a>
    Test menu item
  </styled.a>
</li>
`;
